src/test/ui/type/type-check/unknown_type_for_closure.rs
fn main() {
    let x = |_| {    }; //~ ERROR type annotations needed
}
